-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 8u212
-
Component/s: hotspot
-
Environment:
32 bit
-
b21
-
x86
-
linux, windows
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8297633 | 11.0.18 | Christoph Langer | P4 | Resolved | Fixed | b05 |
| JDK-8298008 | openjdk8u372 | Severin Gehwolf | P4 | Resolved | Fixed | b01 |
| JDK-8359523 | shenandoah8u372 | Severin Gehwolf | P4 | Resolved | Fixed | b01 |
https://github.com/AdoptOpenJDK/openjdk-tests/issues/1162
The test fails on 32bit windows with:
java.lang.IllegalStateException: WB_IncMetaspaceCapacityUntilGC: could not increase capacity until GC due to contention with another thread
at sun.hotspot.WhiteBox.incMetaspaceCapacityUntilGC(Native Method)
at TestCapacityUntilGCWrapAround.main(TestCapacityUntilGCWrapAround.java:51)
at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
at java.lang.reflect.Method.invoke(Method.java:498)
at com.sun.javatest.regtest.agent.MainWrapper$MainThread.run(MainWrapper.java:127)
at java.lang.Thread.run(Thread.java:748)
- backported by
-
JDK-8297633 win32: gc/metaspace/TestCapacityUntilGCWrapAround.java fails
-
- Resolved
-
-
JDK-8298008 win32: gc/metaspace/TestCapacityUntilGCWrapAround.java fails
-
- Resolved
-
-
JDK-8359523 win32: gc/metaspace/TestCapacityUntilGCWrapAround.java fails
-
- Resolved
-
- relates to
-
JDK-8217432 MetaspaceGC::_capacity_until_GC exceeds MaxMetaspaceSize
-
- Resolved
-
-
JDK-8245707 Increase Metaspace reserve alignment
-
- Resolved
-
- links to
-
Commit
openjdk/jdk8u-dev/55101454
-
Commit
openjdk/jdk11u-dev/99b722d7
-
Commit
openjdk/jdk/038f58d4
-
Review
openjdk/jdk8u-dev/192
-
Review
openjdk/jdk11u-dev/1549
-
Review
openjdk/jdk/628