8226236: [TESTBUG] win32: gc/metaspace/TestCapacityUntilGCWrapAround.java fails