test/hotspot/jtreg/gc/metaspace/TestCapacityUntilGCWrapAround.java
@@ -25,11 +25,10 @@ package gc.metaspace;
 
 /*
  * @test
- * @bug 8049831
+ * @bug 8049831 8226236
  * @library /test/lib
  * @modules java.base/jdk.internal.misc
  *          java.management
- * @requires vm.bits == 32
  * @build sun.hotspot.WhiteBox
  * @run driver ClassFileInstaller sun.hotspot.WhiteBox
  * @run main/othervm -Xbootclasspath/a:. -XX:+UnlockDiagnosticVMOptions -XX:+WhiteBoxAPI gc.metaspace.TestCapacityUntilGCWrapAround
@@ -41,19 +40,30 @@ import jdk.test.lib.Asserts;
 
 public class TestCapacityUntilGCWrapAround {
     private static long MB = 1024 * 1024;
-    private static long GB = 1024 * MB;
-    private static long MAX_UINT = 4 * GB - 1; // On 32-bit platforms
+
+    private static void incMetaspaceCapacityUntilGCTest(WhiteBox wb) {
+        long before = wb.metaspaceCapacityUntilGC();
+        long after = wb.incMetaspaceCapacityUntilGC(100 * MB);
+
+        Asserts.assertGTE(after, before,
+                          "Increasing with INC should not cause wrap around: " + after + " < " + before);
+    }
+
+    private static void incMetaspaceCapacityUntilGCWithOverflowTest(WhiteBox wb) {
+        // Force possible overflow of capacity_until_GC.
+        long maxMetaspaceSize = wb.getSizeTVMFlag("MaxMetaspaceSize").longValue();
+        try {
+            long after = wb.incMetaspaceCapacityUntilGC(maxMetaspaceSize);
+            throw new RuntimeException("Metaspace capacity should not be increased: after: " + Long.toUnsignedString(maxMetaspaceSize));
+        } catch (IllegalStateException e) {
+            // expected
+        }
+    }
 
     public static void main(String[] args) {
         WhiteBox wb = WhiteBox.getWhiteBox();
 
-        long before = wb.metaspaceCapacityUntilGC();
-        // Now force possible overflow of capacity_until_GC.
-        long after = wb.incMetaspaceCapacityUntilGC(MAX_UINT);
-
-        Asserts.assertGTE(after, before,
-                          "Increasing with MAX_UINT should not cause wrap around: " + after + " < " + before);
-        Asserts.assertLTE(after, MAX_UINT,
-                          "Increasing with MAX_UINT should not cause value larger than MAX_UINT:" + after);
+        incMetaspaceCapacityUntilGCTest(wb);
+        incMetaspaceCapacityUntilGCWithOverflowTest(wb);
     }
 }
